Fixed front image and added a contact image

--- a/index.html
+++ b/index.html
@@ -757,9 +757,9 @@
                 <div class="container">
                     <div class="footer-info">
                         <h2>Simran</h2>
-                        <h3>2130 University Avenue, Madison, USA</h3>
+                        <h3>2130 University Avenue, Madison, WI, USA</h3>
                         <div class="footer-menu">
-                            <p>+1(608)-421-4386</p>
+                            <!-- <p>+1(608)-421-4386</p> -->
                             <p>simran210agarwal@gmail.com</p>
                         </div>
                         <div class="footer-social">
