--- a/index.html
+++ b/index.html
@@ -322,7 +322,8 @@
                             <li data-filter=".filter-2">C</li>
                             <li data-filter=".filter-3">Python</li>
                             <li data-filter=".filter-4">Software Design & Database Management</li>
-                            <li data-filter=".filter-5">Assembly Language</li>
+                            <li data-filter=".filter-5">Web Development</li>
+                            <li data-filter=".filter-6">Assembly Language</li>
                         </ul>
                     </div>
                 </div>
@@ -357,6 +358,17 @@
                             <div class="portfolio-text">
                                 <h3>JavaScript quiz game</h3>
                                 <a class="btn" href="img/portfolio-3.jpg" data-lightbox="portfolio">+</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-5 wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="portfolio-wrap">
+                            <div class="portfolio-img">
+                                <img src="img/portfolio-3.jpg" alt="Image">
+                            </div>
+                            <div class="portfolio-text">
+                                <h3>Implicit Bias Test</h3>
+                                <a class="btn" href="https://smileysim01.github.io/implicitBiasTest/" alt= "Loading Implicit Bias Test Website">+</a>
                             </div>
                         </div>
                     </div>
