updated projects in C

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             <div class="container">
                 <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
                     <p>My Portfolio</p>
-                    <h2>My Hard Worked Projects</h2>
+                    <h2>Some Tech Savvy Projects</h2>
                 </div>
                 <div class="row">
                     <div class="col-12">
@@ -334,7 +334,7 @@
                                 <img src="img/songSearchImg.jpg" alt="Image">
                             </div>
                             <div class="portfolio-text">
-                                <h3>Song Search Application</h3>
+                                <h3>Sound Safari</h3>
                                 <a class="btn" href="https://github.com/smileysim01/Song-Search-Application" alt= "Loading Song-Search-Application from GitHub">+</a>
                             </div>
                         </div>
@@ -345,8 +345,8 @@
                                 <img src="img/portfolio-2.jpg" alt="Image">
                             </div>
                             <div class="portfolio-text">
-                                <h3>Product Landing Page</h3>
-                                <a class="btn" href="img/portfolio-2.jpg" data-lightbox="portfolio">+</a>
+                                <h3>Encryptonator</h3>
+                                <a class="btn" href="https://github.com/smileysim01/Encryptonator" alt="Loading Encryptonator from GitHub">+</a>
                             </div>
                         </div>
                     </div>
@@ -697,7 +697,7 @@
                                         <p class="help-block"></p>
                                     </div>
                                     <div>
-                                        <button class="btn" type="submit" id="sendMessageButton">Send Message</button>
+                                        <button class="btn" type="submit" href = "https://forms.gle/sWsnzvj3asp22PbG8" id="sendMessageButton">Send Message</button>
                                     </div>
                                 </form>
                             </div>
