--- a/index.html
+++ b/index.html
@@ -339,6 +339,28 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="portfolio-wrap">
+                            <div class="portfolio-img">
+                                <img src="img/carCatalogImg.jpg" alt="Image">
+                            </div>
+                            <div class="portfolio-text">
+                                <h3>Car Wise</h3>
+                                <a class="btn" href="https://github.com/smileysim01/Car-Catalog-App" alt= "Loading Car-Catalog-App from GitHub">+</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="portfolio-wrap">
+                            <div class="portfolio-img">
+                                <img src="img/AirNinja.jpeg" alt="Image">
+                            </div>
+                            <div class="portfolio-text">
+                                <h3>Air Ninja</h3>
+                                <a class="btn" href="https://github.com/smileysim01/AirportTravelApp" alt= "Loading Airport-Travel-App from GitHub">+</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
@@ -350,14 +372,25 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="0.8s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
-                                <img src="img/portfolio-3.jpg" alt="Image">
+                                <img src="img/repliWave.png" alt="Image">
                             </div>
                             <div class="portfolio-text">
-                                <h3>JavaScript quiz game</h3>
-                                <a class="btn" href="img/portfolio-3.jpg" data-lightbox="portfolio">+</a>
+                                <h3>RepliWave</h3>
+                                <a class="btn" href="https://github.com/smileysim01/HDFS_replication" alt= "Loading Repliwave from GitHub">+</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-4 wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="portfolio-wrap">
+                            <div class="portfolio-img">
+                                <img src="img/hopOn.jpg" alt="Image">
+                            </div>
+                            <div class="portfolio-text">
+                                <h3>Hop On</h3>
+                                <a class="btn" href="https://github.com/smileysim01/Ride-Sharing-App" alt="Loading Ride-Sharing-App from GitHub">+</a>
                             </div>
                         </div>
                     </div>
@@ -372,29 +405,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="portfolio-wrap">
-                            <div class="portfolio-img">
-                                <img src="img/carCatalogImg.jpg" alt="Image">
-                            </div>
-                            <div class="portfolio-text">
-                                <h3>Car Catalog Application</h3>
-                                <a class="btn" href="https://github.com/smileysim01/Car-Catalog-App" alt= "Loading Car-Catalog-App from GitHub">+</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.8s">
-                        <div class="portfolio-wrap">
-                            <div class="portfolio-img">
-                                <img src="img/portfolio-5.jpg" alt="Image">
-                            </div>
-                            <div class="portfolio-text">
-                                <h3>Social Mobile Apps</h3>
-                                <a class="btn" href="img/portfolio-5.jpg" data-lightbox="portfolio">+</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="1s">
+                    <!-- <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="1s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
                                 <img src="img/portfolio-6.jpg" alt="Image">
@@ -404,7 +415,7 @@
                                 <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
