--- a/index.html
+++ b/index.html
@@ -383,6 +383,28 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="portfolio-wrap">
+                            <div class="portfolio-img">
+                                <img src="img/loanLab.png" alt="Image">
+                            </div>
+                            <div class="portfolio-text">
+                                <h3>Loan Lab: Spark</h3>
+                                <a class="btn" href="https://github.com/smileysim01/loanLab" alt= "Loading Loan Lab from GitHub">+</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="portfolio-wrap">
+                            <div class="portfolio-img">
+                                <img src="img/loanLab.png" alt="Image">
+                            </div>
+                            <div class="portfolio-text">
+                                <h3>Loan Lab: BigQuery</h3>
+                                <a class="btn" href="https://github.com/smileysim01/BigQuery_LoanAnalysis" alt= "Loading LoanLab-BigQuery from GitHub">+</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-4 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
