Added more projects

--- a/index.html
+++ b/index.html
@@ -405,6 +405,17 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="portfolio-wrap">
+                            <div class="portfolio-img">
+                                <img src="img/linkLocator.png" alt="Image">
+                            </div>
+                            <div class="portfolio-text">
+                                <h3>Link Locator: Web Scraping</h3>
+                                <a class="btn" href="https://github.com/smileysim01/Path_Finder" alt= "Loading Path-Finder from GitHub">+</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-4 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
@@ -419,7 +430,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-5 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
-                                <img src="img/portfolio-3.jpg" alt="Image">
+                                <img src="img/implicitBias.png" alt="Image">
                             </div>
                             <div class="portfolio-text">
                                 <h3>Implicit Bias Test</h3>
@@ -427,17 +438,17 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="1s">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-6 wow fadeInUp" data-wow-delay="1s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
-                                <img src="img/portfolio-6.jpg" alt="Image">
+                                <img src="img/armstrong.png" alt="Image">
                             </div>
                             <div class="portfolio-text">
-                                <h3>Company Website</h3>
-                                <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                <h3>Armstrong: x86 Microprocessor</h3>
+                                <a class="btn" href="https://github.com/smileysim01/8086-microprocessor" alt="Loading Armstrong Number project from GitHub">+</a>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </div>
