--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
                         <div class="col-md-8">
                             <div class="contact-form">
                                 <div id="success"></div>
-                                <form action="http://formspree.io/simran210agarwal@gmail.com" name="sentMessage" id="contactForm" novalidate="novalidate">
+                                <form action="http://formspree.io/simran210agarwal@gmail.com" method="post" name="sentMessage" id="contactForm" novalidate="novalidate">
                                     <div class="control-group">
                                         <input type="text" class="form-control" id="name" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name" />
                                         <p class="help-block"></p>
