Debugging contact form

--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
                 <div class="container">
                     <div class="footer-info">
                         <h2>Simran</h2>
-                        <h3>2130 University Avenue, Madison, WI, USA</h3>
+                        <h3>Jurupa Valley, CA, USA</h3>
                         <div class="footer-menu">
                             <!-- <p>+1(608)-421-4386</p> -->
                             <p>simran210agarwal@gmail.com</p>
@@ -862,5 +862,38 @@
 
         <!-- Template Javascript -->
         <script src="js/main.js"></script>
+
+        <!-- <script>
+            var form = document.getElementById("contactForm");
+            
+            async function handleSubmit(event) {
+              event.preventDefault();
+              var status = document.getElementById("my-form-status");
+              var data = new FormData(event.target);
+              fetch(event.target.action, {
+                method: form.method,
+                body: data,
+                headers: {
+                    'Accept': 'application/json'
+                }
+              }).then(response => {
+                if (response.ok) {
+                  status.innerHTML = "Thanks for your submission!";
+                  form.reset()
+                } else {
+                  response.json().then(data => {
+                    if (Object.hasOwn(data, 'errors')) {
+                      status.innerHTML = data["errors"].map(error => error["message"]).join(", ")
+                    } else {
+                      status.innerHTML = "Oops! There was a problem submitting your form"
+                    }
+                  })
+                }
+              }).catch(error => {
+                status.innerHTML = "Oops! There was a problem submitting your form"
+              });
+            }
+            form.addEventListener("submit", handleSubmit)
+        </script> -->
     </body>
 </html>
