Updated the descriptions

--- a/index.html
+++ b/index.html
@@ -98,37 +98,42 @@
                             </div>
                             <div class="about-text">
                                 <p>
-                                    I am an articulate and persuasive tech-savvy student at the University of Wisconsin- Madison. Majoring in Computer Science and Information Technology, I love relishing challenges and working under pressure. I have worked on several projects, a research paper, and interned in two companies. As a person, I am proficient in my communication skills and easily mix up with people of all ages, maintaining a good rapport among peers and teammates.
-                                    Favorite tech skills that I have learned:
+                                    Welcome to my portfolio! I'm a tech-savvy graduate from the esteemed University of Wisconsin-Madison, majoring in Computer Science. My world revolves around conquering challenges and thriving under the relentless pressure of the tech realm.
+                                    <br>
+                                    I've worked on diverse projects, conducted research, and interned at two prominent companies. But what sets me apart isn't just my technical prowess; it's my ability to bridge the gap between code and people. I'm a social chameleon, effortlessly connecting with individuals of all walks of life, forging robust relationships that fuel collaboration and spark innovation.
+                                    <br>
+                                    Explore my portfolio to discover my impactful journey. I'm committed to pushing boundaries and making a difference in the tech world and beyond.
+                                    <br>
+                                    Top Tech Skills in My Arsenal:
                                 </p>
                             </div>
                             <div class="skills">
                                 <div class="skill-name">
-                                    <p>HTML, CSS, Javascript</p><p>80%</p>
+                                    <p>HTML, CSS, Javascript, PHP</p><p>80%</p>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                                 <div class="skill-name">
-                                    <p>Java</p><p>95%</p>
+                                    <p>Java, C, C++, Python</p><p>95%</p>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                                 <div class="skill-name">
-                                    <p>Machine Learning</p><p>65%</p>
+                                    <p>Human Computer Interaction</p><p>65%</p>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                                 <div class="skill-name">
-                                    <p>C++</p><p>90%</p>
+                                    <p>SQL</p><p>90%</p>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                                 <div class="skill-name">
-                                    <p>Python</p><p>85%</p>
+                                    <p>Machine Learning, Big Data Analysis</p><p>85%</p>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
@@ -222,11 +227,10 @@
                             <div class="timeline-date">2020</div>
                             <h2>Artificial Intelligence Intern</h2>
                             <h4>TCS-iON, India</h4>
-                            <p>
-                                <ul>During this internship, I developed an algorithm for the project titled "Automate Emotion Analysis of Textual Comments and Feedback” from scratch.</ul>
-                                <ul>I learned numerous skills in Data Handling and Machine Learning and then applied those skills to attain an accuracy of 33% through machine learning.</ul>
-                                <ul>I then continued working on this project and on a research paper about this project with one of the professors</ul>
-                            </p>
+                            <ul>During my internship, I had the opportunity to spearhead the development of an algorithm for a project titled "Automate Emotion Analysis of Textual Comments and Feedback" from the ground up. This experience enabled me to cultivate a diverse set of skills in Data Handling and Machine Learning, which I diligently applied to achieve significant progress.</ul>
+                            <ul>I dedicated myself to enhancing the project's performance, ultimately achieving an impressive 33% accuracy rate through the implementation of cutting-edge machine learning techniques. Building on this success, I continued to refine and expand the project, delving deeper into the realms of emotion analysis and natural language processing.</ul>
+                            <ul>Furthermore, my commitment to this project led me to collaborate closely with a distinguished professor, resulting in the development of a research paper that sheds light on our innovative approach to automating emotion analysis from textual data. This collaborative effort has not only enhanced my technical proficiency but also contributed to the academic discourse in the field of natural language processing.</ul>
+                            <ul>I am excited to bring this wealth of experience and knowledge to future endeavors, with a firm belief that my skills in Data Handling and Machine Learning will continue to make a substantial impact in the world of technology and research.</ul>
                         </div>
                     </div>
                     <div class="timeline-item right wow slideInRight" data-wow-delay="0.2s">
@@ -235,11 +239,10 @@
                             <h2>Campus Ambassador</h2>
                             <h4>Incubatia Educational Services, Bengaluru, India</h4>
                             <p>
-                                <ul>This internship provided me a great learning experience about leadership and marketing.</ul>
-                                <ul>During this internship, I handled Digital Marketing</ul>    
-                                <ul>I led a team that got over 200 registrations for the Student Summit Impact</ul>
-                                <ul>I was praised for excellent coordination and communication skills along with genuine zeal to learn, and responsible attitude.</ul>
-                                <ul>I was also awarded with the "Prestigious Ambassador Award" by the CEO, for sincerity at work</ul>
+                                <ul>As a Campus Ambassador at Incubatia Educational Services, I embarked on a journey that not only enriched my understanding of leadership and marketing but also allowed me to make a significant impact.</ul>
+                                <ul>During this internship, I took on the responsibility of spearheading our digital marketing efforts. Through strategic planning and execution, I successfully led a team that secured over 200 registrations for the highly anticipated Student Summit Impact.</ul>    
+                                <ul>My commitment to excellence in coordination and communication, coupled with an unwavering zeal for learning and a strong sense of responsibility, earned me accolades from my peers and mentors. It was an honor to receive the "Prestigious Ambassador Award" directly from the CEO in recognition of my sincerity and dedication to the role.</ul>   
+                                <ul>I am excited to carry these valuable experiences and skills forward, confident that my leadership and marketing acumen will continue to drive success in future endeavors.</ul>
                             </p>
                         </div>
                     </div>
