--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8">
         <title>Simran's Portfolio</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Free Website Template" name="keywords">
-        <meta content="Free Website Template" name="description">
+        <!-- <meta content="Free Website Template" name="keywords">
+        <meta content="Free Website Template" name="description"> -->
+        <meta name="google-site-verification" content="EeNJWd_c-pCzIkMO7lqTuxr2ASfRJZ1eYhOOHNeRjYo" />
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
