--- a/index.html
+++ b/index.html
@@ -322,9 +322,9 @@
                     <div class="col-12">
                         <ul id="portfolio-filter">
                             <li data-filter="*" class="filter-active">All</li>
-                            <li data-filter=".filter-1">Java</li>
-                            <li data-filter=".filter-2">C</li>
-                            <li data-filter=".filter-3">Python</li>
+                            <li data-filter=".filter-1">Backend</li>
+                            <li data-filter=".filter-2">Data Engineer</li>
+                            <li data-filter=".filter-3">Integration Manager</li>
                             <li data-filter=".filter-4">Software Design & Database Management</li>
                             <li data-filter=".filter-5">Web Development</li>
                             <li data-filter=".filter-6">Assembly Language</li>
@@ -338,56 +338,56 @@
                                 <img src="img/songSearchImg.jpg" alt="Image">
                             </div>
                             <div class="portfolio-text">
-                                <h3>Sound Safari</h3>
+                                <h3>Sound Safari: Java</h3>
                                 <a class="btn" href="https://github.com/smileysim01/Song-Search-Application" alt= "Loading Song-Search-Application from GitHub">+</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.6s">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
-                                <img src="img/carCatalogImg.jpg" alt="Image">
+                                <img src="img/lyft.png" alt="Image">
                             </div>
                             <div class="portfolio-text">
-                                <h3>Car Wise</h3>
-                                <a class="btn" href="https://github.com/smileysim01/Car-Catalog-App" alt= "Loading Car-Catalog-App from GitHub">+</a>
+                                <h3>Lyft: Backend Simulation(Python)</h3>
+                                <a class="btn" href="https://github.com/smileysim01/lyft_backendSimulation" alt="Loading Lyft Backend Simulation from GitHub">+</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="portfolio-wrap">
-                            <div class="portfolio-img">
-                                <img src="img/AirNinja.jpeg" alt="Image">
-                            </div>
-                            <div class="portfolio-text">
-                                <h3>Air Ninja</h3>
-                                <a class="btn" href="https://github.com/smileysim01/AirportTravelApp" alt= "Loading Airport-Travel-App from GitHub">+</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.2s">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
                                 <img src="img/portfolio-2.jpg" alt="Image">
                             </div>
                             <div class="portfolio-text">
-                                <h3>Encryptonator</h3>
+                                <h3>Encryptonator: C</h3>
                                 <a class="btn" href="https://github.com/smileysim01/Encryptonator" alt="Loading Encryptonator from GitHub">+</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="0.8s">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.0s">
+                        <div class="portfolio-wrap">
+                            <div class="portfolio-img">
+                                <img src="img/carCatalogImg.jpg" alt="Image">
+                            </div>
+                            <div class="portfolio-text">
+                                <h3>Car Wise: Java</h3>
+                                <a class="btn" href="https://github.com/smileysim01/Car-Catalog-App" alt= "Loading Car-Catalog-App from GitHub">+</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
                                 <img src="img/repliWave.png" alt="Image">
                             </div>
                             <div class="portfolio-text">
-                                <h3>RepliWave</h3>
+                                <h3>RepliWave: HDFS</h3>
                                 <a class="btn" href="https://github.com/smileysim01/HDFS_replication" alt= "Loading Repliwave from GitHub">+</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="0.8s">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
                                 <img src="img/loanLab.png" alt="Image">
@@ -398,7 +398,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="0.8s">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.0s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
                                 <img src="img/loanLab.png" alt="Image">
@@ -409,7 +409,29 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="0.8s">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="portfolio-wrap">
+                            <div class="portfolio-img">
+                                <img src="img/AirNinja.jpeg" alt="Image">
+                            </div>
+                            <div class="portfolio-text">
+                                <h3>Air Ninja: Java</h3>
+                                <a class="btn" href="https://github.com/smileysim01/AirportTravelApp" alt= "Loading Airport-Travel-App from GitHub">+</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-4 wow fadeInUp" data-wow-delay="0.2s">
+                        <div class="portfolio-wrap">
+                            <div class="portfolio-img">
+                                <img src="img/hopOn.jpg" alt="Image">
+                            </div>
+                            <div class="portfolio-text">
+                                <h3>Hop On: UML, DBMS</h3>
+                                <a class="btn" href="https://github.com/smileysim01/Ride-Sharing-App" alt="Loading Ride-Sharing-App from GitHub">+</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-5 wow fadeInUp" data-wow-delay="0.0s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
                                 <img src="img/linkLocator.png" alt="Image">
@@ -420,18 +442,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-4 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="portfolio-wrap">
-                            <div class="portfolio-img">
-                                <img src="img/hopOn.jpg" alt="Image">
-                            </div>
-                            <div class="portfolio-text">
-                                <h3>Hop On</h3>
-                                <a class="btn" href="https://github.com/smileysim01/Ride-Sharing-App" alt="Loading Ride-Sharing-App from GitHub">+</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-5 wow fadeInUp" data-wow-delay="0.4s">
+
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-5 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
                                 <img src="img/implicitBias.png" alt="Image">
@@ -442,7 +454,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-6 wow fadeInUp" data-wow-delay="1s">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-6 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
                                 <img src="img/armstrong.png" alt="Image">
